crates/macro-tools/tests/ui/deref/fail/deref_mut_without_opt_in.rs
use picea_macro_tools::Deref;

#[derive(Deref)]
struct Wrapper {
    #[deref]
    value: Vec<i32>,
    label: &'static str,
}

#[allow(unused_mut)]
fn main() {
    let mut wrapper = Wrapper {
        value: vec![1, 2],
        label: "meta",
    };

    wrapper.push(3);
}
